--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Predicting Healthcare Cost
 subtitle: A BIO 260 and CSCI E107 Project
-baseurl: /DataScienceFinalProject
+url: /DataScienceFinalProject
 description: "A BIO 260 and CSCI E107 Project"
 title_two: "Among Medicare Beneficiaries in Massachusetts"
 meta_author: Xiner Zhou Paula Jacobs Shirley Galbiati
