retrying the version that works locally

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Predicting Healthcare Cost
 subtitle: A BIO 260 and CSCI E107 Project
-baseurl: http://xiner-shirley-paula.github.io/DataScienceFinalProject
+url: http://xiner-shirley-paula.github.io/DataScienceFinalProject
 #baseurl: /DataScienceFinalProject
 description: "A BIO 260 and CSCI E107 Project"
 title_two: "Among Medicare Beneficiaries in Massachusetts"
